fix no ai in water bug